--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,6 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
@@ -14,6 +11,10 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "10.2.1"
 }
 
 task clean(type: Delete) {
